--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,4 +5,18 @@
 @import 'variables';
 
 // Bootstrap
+// Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+@import "~admin-lte/dist/css/adminlte.css";
+@import "~admin-lte/dist/css/adminlte.min.css";
+
+
+// @import "~@fortawesome/fontawesome-svg-core/styles.css";
+@import "~@fortawesome/fontawesome-free/css/fontawesome.css";
+@import "~@fortawesome/fontawesome-free/css/all.css";
+@import "~@fortawesome/fontawesome-free/css/brands.css";
+@import "~@fortawesome/fontawesome-free/css/regular.css";
+@import "~@fortawesome/fontawesome-free/css/solid.css";
+@import "~@coreui/coreui/scss/coreui";
