--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,9 +14,16 @@
 
 
 // @import "~@fortawesome/fontawesome-svg-core/styles.css";
-@import "~@fortawesome/fontawesome-free/css/fontawesome.css";
-@import "~@fortawesome/fontawesome-free/css/all.css";
-@import "~@fortawesome/fontawesome-free/css/brands.css";
-@import "~@fortawesome/fontawesome-free/css/regular.css";
-@import "~@fortawesome/fontawesome-free/css/solid.css";
-@import "~@coreui/coreui/scss/coreui";
+@import "https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/css/fontawesome.css";
+@import "https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/css/all.css";
+@import "https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/css/brands.css";
+@import "https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/css/regular.css";
+@import "https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/css/solid.css";
+@import "https://prepaidproject.herokuapp.com/fonts/vendor/@coreui/coreui/scss/coreui";
+
+// @import "~@fortawesome/fontawesome-free/css/fontawesome.css";
+// @import "~@fortawesome/fontawesome-free/css/all.css";
+// @import "~@fortawesome/fontawesome-free/css/brands.css";
+// @import "~@fortawesome/fontawesome-free/css/regular.css";
+// @import "~@fortawesome/fontawesome-free/css/solid.css";
+// @import "~@coreui/coreui/scss/coreui";
