--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);/*!
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/webfa-solid-900.woff2);@import url(https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/webfa-solid-900.ttf);@import url(https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/webfa-solid-900.woff);@import url(https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/css/regular.css);@import url(https://prepaidproject.herokuapp.com/fonts/vendor/@fortawesome/fontawesome-free/css/solid.css);@import url(https://prepaidproject.herokuapp.com/fonts/vendor/@coreui/coreui/scss/coreui);/*!
  *   AdminLTE v3.0.5
  *   Author: Colorlib
  *   Website: AdminLTE.io <http://adminlte.io>
